fix extra space in the right for smaller screens

--- a/main.css
+++ b/main.css
@@ -452,6 +452,7 @@ body {
     background: linear-gradient(to bottom, rgba(248, 250, 252, 0.8), rgba(241, 245, 249, 0.9));
     padding: 5rem 2%;
     position: relative;
+    overflow-x: hidden;
 
     &::before {
         content: '';
